<resources>
    <string name="app_name">CryptoStadisticsMS</string>
    <string name="channel_name">Marcos_Bot</string>
    <string name="channel_description">Prueba de funcionamiento</string>
    <string name="notification_title">Titulo Notificacion</string>
    <string name="notification_message">Mensaje de la notificacion</string>
    <string name="cryptostadisticsms">CryptoStadisticsMS</string>
    <string name="authors">Created by Marcos Vazquez and Sergio Groppa</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="ethereum">Ethereum</string>
    <string name="solana">Solana</string>
    <string name="home">Home</string>
    <string name="about_us">Information</string>
    <string name="mensajes">Message</string>
    <string name="del_really_crypto">¿Desear eliminar la moneda seleccionada?</string>
    <string name="del_crypto">Eliminar Moneda</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="active_notifications">Activar notificaciones:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit">Exit</string>
    <string name="message">Message</string>
    <string name="no_notification">No hay ninguna noticicacion</string>
    <string name="contant_us">Contant us:</string>
    <string name="sdgroppa_gmail_com">sdgroppa@gmail.com</string>
    <string name="marcovaz033_gmail_com">marcovaz033@gmail.com</string>
    <string name="add_notification">Informacion</string>
    <string name="barra_de_navegacion">Barra de navegacion</string>
    <string name="estos_son_los_apartados">Estos son los apartados:</string>
</resources>