<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:padding="20dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/twotone_apps_24"
            android:layout_centerVertical="true"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_add_24"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlBitcoin"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/card_1"
                android:elevation="4dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/bitcoin"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bitcoin"
                android:gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlEtherium"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/card_2"
                android:elevation="4dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ethereum"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ethereum"
                android:gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlSolana"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/card_3"
                android:elevation="4dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/solana"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/solana"
                android:gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_newNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Crear Notificacion" />

</LinearLayout>